--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  lint-app:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-  build-docker:
-    machine: true
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: Build docker container for each microservices
-          command: |
-            echo "--------- Installing dependencies-----------"
-            sudo curl -LO https://nodejs.org/dist/v18.0.0/node-v18.0.0-linux-x64.tar.xz
-            sudo tar -xvf node-v18.0.0-linux-x64.tar.xz
-            sudo cp -r node-v18.0.0-linux-x64/{bin,include,lib,share} /usr/
-            node --version => v14.10.0
-            sudo apt install nodejs
-            echo "--------- The images is Building ------------"
-            docker build -t udagram-api-feed ./udagram-api-feed
-            docker tag udagram-api-feed chisomon/udagram-api-feed:latest
-            docker build -t udagram-api-user ./udagram-api-user
-            docker tag udagram-api-user chisomon/udagram-api-user:latest
-            
-            docker build -t udagram-frontend ./udagram-frontend
-            docker tag udagram-frontend chisomon/udagram-frontend:local
-            docker build -t udagram-reverseproxy ./udagram-reverseproxy
-            docker tag udagram-reverseproxy chisomon/udagram-reverseproxy:latest
-            echo "-------- All images succesfully built----------"
-            echo " ------- login in to hub--------"
-            docker login -u chisomon -p $DOCKERPASS
-            echo "-------------- Pushing images to dockerhub-------"
-            docker push chisomon/udagram-api-feed:latest
-            docker push chisomon/udagram-api-user:latest
-            docker push chisomon/udagram-frontend:local
-            docker push chisomon/udagram-reverseproxy:latest
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  default:
+  say-hello-workflow:
     jobs:
-      - lint-app
-      - build-docker:
-          requires: [lint-app]
+      - say-hello
